--- a/docs/faststore/components/atoms/loader.mdx
+++ b/docs/faststore/components/atoms/loader.mdx
@@ -9,7 +9,7 @@ components:
 
 [<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Loader)
 
-<Tabs items={['Example', 'Code']} defaultIndex="0">
+<Tabs items={["Example", "Code"]} defaultIndex="0">
   <Tab>
     <OverviewSection>
       <Loader />
@@ -21,8 +21,7 @@ components:
   <Tab>
     ```tsx
     <Loader />
-    ```
-    ```tsx
+    ``` ```tsx
     <Loader variant="light" />
     ```
   </Tab>
@@ -35,7 +34,7 @@ components:
 ### Import the component
 
 ```tsx
-import { Loader } from '@faststore/ui'
+import { Loader } from "@faststore/ui";
 ```
 
 ### Import styles
@@ -43,7 +42,7 @@ import { Loader } from '@faststore/ui'
 To apply styles, include the following in your stylesheet:
 
 ```scss
-@import '@faststore/ui/src/components/atoms/Loader/styles.scss';
+@import "@faststore/ui/src/components/atoms/Loader/styles.scss";
 ```
 
 For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
@@ -56,7 +55,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 #### Dark (Default)
 
-<Tabs items={['Example', 'Code']} defaultIndex="0">
+<Tabs items={["Example", "Code"]} defaultIndex="0">
   <Tab>
     <OverviewSection>
       <Loader />
@@ -71,7 +70,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 #### Light
 
-<Tabs items={['Example', 'Code']} defaultIndex="0">
+<Tabs items={["Example", "Code"]} defaultIndex="0">
   <Tab>
     <OverviewSection dark>
       <Loader variant="light" />
@@ -81,7 +80,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     ```tsx
     <Loader variant="light" />
     ```
-  <Tab>
+  </Tab>
 </Tabs>
 
 ---
@@ -165,7 +164,7 @@ You can target and override `Loader` styles using the following data attributes:
     actionPath="/docs/guides/faststore/atoms-button#loading"
   >
     <Button variant="primary" loadingLabel="Loading" loading>
-      {'Add to Cart'}
+      {"Add to Cart"}
     </Button>
   </SectionItem>
 </SectionList>
