Apply suggestions from code review

--- a/docs/faststore/components/organisms/filter-slider.mdx
+++ b/docs/faststore/components/organisms/filter-slider.mdx
@@ -5,7 +5,7 @@ components:
   - FilterSlider.tsx
 ---
 
-[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/organisms/FilterSlider)
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/blob/main/packages/components/src/organisms/Filter/FilterSlider.tsx)
 
 The mobile `Filter` view that is rendered inside a `SlideOver` component.The `FilterSlider` component is a compound of the following:
 
