--- a/docs/faststore/components/atoms/link.mdx
+++ b/docs/faststore/components/atoms/link.mdx
@@ -97,7 +97,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     <OverviewSection>
       <Link variant="inline">Inline Link</Link>
     </OverviewSection>
-  <Tab>
+  </Tab>
   <Tab>
     ```tsx
     <Link variant="inline">Inline Link</Link>
