--- a/docs/faststore/components/atoms/radio.mdx
+++ b/docs/faststore/components/atoms/radio.mdx
@@ -75,7 +75,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     <OverviewSection>
       <Radio checked disabled readOnly />
     </OverviewSection>
-  <Tab>
+  </Tab>
   <Tab>
     ```tsx
     <Radio checked disabled />
