--- a/docs/faststore/components/molecules/product-price.mdx
+++ b/docs/faststore/components/molecules/product-price.mdx
@@ -102,6 +102,8 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   </Tab>
 </Tabs>
 
+### Example of price formatter function
+
 ```tsx
 // Example of formatter
 interface PriceFormatterOptions {
