--- a/docs/faststore/components/molecules/quantity-selector.mdx
+++ b/docs/faststore/components/molecules/quantity-selector.mdx
@@ -64,6 +64,8 @@ import "@faststore/ui/src/components/molecules/QuantitySelector/styles.scss";
 
 ---
 
+## Design tokens
+
 <TokenTable>
   <TokenRow
     token="--fs-qty-selector-width"
@@ -130,9 +132,7 @@ import "@faststore/ui/src/components/molecules/QuantitySelector/styles.scss";
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Button
+### Design tokens: Button
 
 <TokenTable>
   <TokenRow
