--- a/docs/faststore/components/molecules/rating-field.mdx
+++ b/docs/faststore/components/molecules/rating-field.mdx
@@ -93,9 +93,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ## Design tokens
 
-### Nested elements
-
-#### Label
+### Design tokens: Label
 
 <TokenTable>
   <TokenRow
@@ -113,9 +111,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Variants
-
-#### Error
+### Design tokens: Error
 
 <TokenTable>
   <TokenRow
