--- a/docs/faststore/components/molecules/rating.mdx
+++ b/docs/faststore/components/molecules/rating.mdx
@@ -82,13 +82,15 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     </OverviewSection>
   </Tab>
   <Tab>
-    ```tsx const [rating, setRating] = useState(3)
+    ```tsx 
+    const [rating, setRating] = useState(3)
+
     <Rating value={rating} onChange={setRating} icon={<Icon name="Star" />} />
     ```
   </Tab>
 </Tabs>
 
-#### Other icon
+### Custom icon
 
 <Tabs items={["Example", "Code"]} defaultIndex="0">
   <Tab>
