--- a/docs/faststore/components/molecules/search-auto-complete.mdx
+++ b/docs/faststore/components/molecules/search-auto-complete.mdx
@@ -153,9 +153,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Item
+### Design tokens: Item
 
 <TokenTable>
   <TokenRow
@@ -174,7 +172,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Icon
+### Design tokens: Icon
 
 <TokenTable>
   <TokenRow
