--- a/docs/faststore/components/molecules/search-history.mdx
+++ b/docs/faststore/components/molecules/search-history.mdx
@@ -128,9 +128,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Header
+### Design tokens: Header
 
 <TokenTable>
   <TokenRow
@@ -143,7 +141,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Title
+### Design tokens: Title
 
 <TokenTable>
   <TokenRow
@@ -153,7 +151,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-search-history-title-line-height" value="1.5" />
 </TokenTable>
 
-#### Item
+### Design tokens: Item
 
 <TokenTable>
   <TokenRow
@@ -172,7 +170,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Icon
+### Design tokens: Icon
 
 <TokenTable>
   <TokenRow
@@ -199,7 +197,7 @@ You can target and override `SearchHistory` styles using the following data attr
 
 `data-fs-search-history-item-link`
 
-## `data-fs-search-history-item-icon`
+`data-fs-search-history-item-icon`
 
 ---
 
