--- a/docs/faststore/components/organisms/banner-text.mdx
+++ b/docs/faststore/components/organisms/banner-text.mdx
@@ -66,7 +66,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ## Examples
 
-#### Variants
+### Variants
 
 #### Primary
 
